--- a/data/cards/43940008.yaml
+++ b/data/cards/43940008.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 决斗塔 阿尔卡特拉斯
 text:
   en: |-
-    At the start of the Battle Phase: Activate this effect; each player can reveal 1 monster from their Deck, except a monster with ? ATK, and if they do, banish those monsters face-down, then the player(s) that revealed the monster with the highest ATK can Special Summon 1 monster from their hand, and if they do, it can attack directly. Once per turn, during the End Phase: You can activate this effect; if this card is still on the field during the End Phase of your next turn, destroy all cards on the field.
+    At the start of each Battle Phase: Each player can reveal 1 monster from their Deck that does not have ? ATK, you banish them face-down, then the player who revealed the monster with the highest ATK (each player, if tied) can Special Summon 1 monster from their hand, and it can attack directly while on the field. Once per turn, during the End Phase: You can activate this effect; if you control this card during the End Phase of your next turn, destroy all cards on the field.
   de:
   es:
   fr:
@@ -31,6 +31,31 @@ text:
 card_type: Spell
 property: Field
 sets:
+  en:
+  - set_number: MP22-EN269
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
+  de:
+  - set_number: MP22-DE269
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
+  fr:
+  - set_number: MP22-FR269
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
+  it:
+  - set_number: MP22-IT269
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
+  pt:
+  - set_number: MP22-PT269
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: HC01-JP006
     set_name: History Archive Collection
