--- a/data/cards/79339613.yaml
+++ b/data/cards/79339613.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 灵魂能源MAX！！
 text:
   en: |-
-    If you control an "Obelisk the Tormentor" whose original Attribute is DIVINE: Tribute 2 face-up monsters, except that "Obelisk the Tormentor"; destroy as many monsters your opponent controls as possible, and if you do, inflict 4000 damage to your opponent. During the Main or Battle Phase: You can banish this card from your GY; add 1 "Obelisk the Tormentor" from your Deck or GY to your hand, then, immediately after this effect resolves, you can Normal Summon 1 "Obelisk the Tormentor". You can only use each effect of "Soul Energy MAX!!!" once per turn.
+    If you control "Obelisk the Tormentor" whose original Attribute is DIVINE in your Monster Zone: Tribute 2 other face-up monsters; destroy as many monsters your opponent controls as possible, and if you do, inflict 4000 damage to your opponent. During the Main or Battle Phase: You can banish this card from your GY; add 1 "Obelisk the Tormentor" from your Deck or GY to your hand, then immediately after this effect resolves, you can Normal Summon 1 "Obelisk the Tormentor". You can only use each effect of "Soul Energy MAX!!!" once per turn.
   de:
   es:
   fr:
@@ -33,6 +33,31 @@ property: Normal
 series:
 - Signature move
 sets:
+  en:
+  - set_number: MP22-EN272
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: MP22-DE272
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: MP22-FR272
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: MP22-IT272
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: MP22-PT272
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: HC01-JP007
     set_name: History Archive Collection
