--- a/data/cards/05611760.yaml
+++ b/data/cards/05611760.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 救之桥梁
 text:
   en: |-
-    If Level 10 or higher monsters with 2 or more different Types are on the field: Shuffle as many cards from each player's hand, field, and GY as possible into the Deck, except this card, then each player draws 5 cards. You can banish this card from your GY; add 1 "Crystal Beast" monster and 1 Field Spell from your Deck to your hand. You can only apply each effect of "Rainbow Bridge of Salvation" once per Duel.
+    If there are 2 or more different Monster Types among the Level 10 or higher monsters on the field: Shuffle all cards except this one from both players' hands, fields, and GYs into the Deck, then each player draws 5 cards. You can banish this card from your GY; add 1 "Crystal Beast" monster and 1 Field Spell from your Deck to your hand. You can only apply each effect of "Rainbow Bridge of Salvation" once per Duel.
   de:
   es:
   fr:
@@ -33,6 +33,31 @@ property: Normal
 series:
 - Rainbow Bridge
 sets:
+  en:
+  - set_number: MP22-EN270
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
+  de:
+  - set_number: MP22-DE270
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
+  fr:
+  - set_number: MP22-FR270
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
+  it:
+  - set_number: MP22-IT270
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
+  pt:
+  - set_number: MP22-PT270
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: HC01-JP014
     set_name: History Archive Collection
