--- a/data/cards/28827503.yaml
+++ b/data/cards/28827503.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 进入智能虚拟网
 text:
   en: |-
-    Special Summon 1 monster from your hand, but negate its effects, then, immediately after this effect resolves, Link Summon 1 Link Monster using materials you control, including the Summoned monster. This Link Summon cannot be negated, also your opponent cannot activate cards or effects when a monster is Link Summoned this way. If a Link Monster(s) you control is destroyed by battle or card effect while this card is in your GY: You can banish this card; add 1 monster with the same original Type as 1 of those destroyed monsters from your GY to your hand. You can only activate 1 "Link into the VRAINS!" per turn.
+    Special Summon 1 monster from your hand, but negate its effects, then, immediately after this effect resolves, Link Summon 1 Link Monster using monsters you control as material, including that monster. This Link Summon cannot be negated, also your opponent cannot activate cards or effects when a monster is Link Summoned this way. If a Link Monster(s) you control is destroyed by battle or card effect while this card is in your GY: You can banish this card; add 1 monster from your GY to your hand with the same original Type as 1 of those destroyed monsters. You can only activate 1 "Link into the VRAINS!" per turn.
   de:
   es:
   fr:
@@ -31,6 +31,31 @@ text:
 card_type: Spell
 property: Normal
 sets:
+  en:
+  - set_number: MP22-EN271
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
+  de:
+  - set_number: MP22-DE271
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
+  fr:
+  - set_number: MP22-FR271
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
+  it:
+  - set_number: MP22-IT271
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
+  pt:
+  - set_number: MP22-PT271
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: HC01-JP043
     set_name: History Archive Collection
