--- a/data/cards/52481437.yaml
+++ b/data/cards/52481437.yaml
@@ -12,7 +12,7 @@ name:
   ko: 탄환특급 불릿 라이너
   ko_rr: Tanhwanteukgeup Bullit Raineo
   zh-TW:
-  zh-CN: 弹丸特急 子弹快车
+  zh-CN: 弹丸特急 子弹快列
 text:
   en: |-
     Cannot declare an attack unless you send 2 other cards you control to the GY. You can only use each of these effects of "Super Express Bullet Train" once per turn.
@@ -44,10 +44,7 @@ text:
     이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 몬스터가 기계족 / 땅 속성 몬스터뿐일 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드의 공격 선언 시기에, 자신은 이 카드 이외의 자신 필드의 카드 2장을 묘지로 보내야 한다. ③: 이 카드가 묘지로 보내진 턴의 엔드 페이즈에, "탄환특급 불릿 라이너" 이외의 자신 묘지의 기계족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①③的效果1回合各能使用1次。
-    ①：自己场上的怪兽只有机械族·地属性怪兽的场合才能发动。这张卡从手卡特殊召唤。
-    ②：这张卡的攻击宣言之际，自己必须把这张卡以外的自己场上2张卡送去墓地。
-    ③：这张卡被送去墓地的回合的结束阶段，以「弹丸特急 子弹快车」以外的自己墓地1只机械族怪兽为对象才能发动。那只怪兽加入手卡。
+    此卡名的①③效果1回合仅可各使用1次。①：自己场上的怪兽仅有机械族・地属性怪兽的情况下可以发动。从手牌将此卡特殊召唤。②：此卡攻击宣言之际，自己必须将自己场上此卡以外的2张卡送至墓地。③：在此卡被送至墓地的回合的结束阶段，以自己墓地的1只"弹丸特急 子弹快列"以外的机械族怪兽为对象可以发动。将该怪兽加入手牌。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: EARTH
@@ -140,4 +137,9 @@ sets:
     set_name: 'Structure Deck R: Machiners Command'
     rarities:
     - Common
+  zh-CN:
+  - set_number: DP21-SC045
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Rare
 yugipedia_page_id: 577967
