--- a/data/cards/24299458.yaml
+++ b/data/cards/24299458.yaml
@@ -55,9 +55,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Ultra Rare
-  - set_number: MP22-EN???
+  - set_number: MP22-EN254
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: ROTD-DE065
     set_name: Rise of the Duelist
@@ -75,6 +76,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Ultra Rare
+  - set_number: MP22-DE254
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: ROTD-FR065
     set_name: Rise of the Duelist
@@ -92,6 +97,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Ultra Rare
+  - set_number: MP22-FR254
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: ROTD-IT065
     set_name: Rise of the Duelist
@@ -109,6 +118,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Ultra Rare
+  - set_number: MP22-IT254
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: ROTD-PT065
     set_name: Rise of the Duelist
@@ -126,6 +139,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Ultra Rare
+  - set_number: MP22-PT254
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: ROTD-JP065
     set_name: Rise of the Duelist
