--- a/data/cards/37626500.yaml
+++ b/data/cards/37626500.yaml
@@ -45,6 +45,10 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: MP22-EN252
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   de:
   - set_number: INOV-DE064
     set_name: 'Invasion: Vengeance'
@@ -54,6 +58,10 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: MP22-DE252
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: INOV-FR064
     set_name: 'Invasion: Vengeance'
@@ -63,6 +71,10 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: MP22-FR252
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   it:
   - set_number: INOV-IT064
     set_name: 'Invasion: Vengeance'
@@ -72,6 +84,10 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: MP22-IT252
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: INOV-PT064
     set_name: 'Invasion: Vengeance'
@@ -81,6 +97,10 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: MP22-PT252
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: INOV-JP064
     set_name: 'Invasion: Vengeance'
