--- a/data/cards/63184227.yaml
+++ b/data/cards/63184227.yaml
@@ -49,26 +49,46 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-EN120
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DAMA-DE003
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-DE120
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DAMA-FR003
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-FR120
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DAMA-IT003
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-IT120
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DAMA-PT003
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-PT120
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DAMA-JP003
     set_name: Dawn of Majesty
